# aps01-api-rest-postgres

./: README.md  pyproject.toml
src/: server.py
src/config/: database.py
