[tool.poetry]
name = "aps01-api-rest-postgres"
version = "0.1.0"
description = "APS final quarto periodo 2023"
authors = ["Matheus Augusto Bertol <matheusbertol76@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
sqlmodel = "^0.0.12"
uvicorn = "^0.24.0.post1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
